--- a/.gitignore
+++ b/.gitignore
@@ -3,55 +3,6 @@ MvcPortal/.idea/encodings.xml
 MvcPortal/.idea/misc.xml
 MvcPortal/.idea/modules.xml
 MvcPortal/.idea/scopes/scope_settings.xml
-MvcPortal/Content/Site.css
-MvcPortal/Content/js/ss-validation.js
-MvcPortal/Content/themes/base/images/ui-bg_flat_0_aaaaaa_40x100.png
-MvcPortal/Content/themes/base/images/ui-bg_flat_75_ffffff_40x100.png
-MvcPortal/Content/themes/base/images/ui-bg_glass_55_fbf9ee_1x400.png
-MvcPortal/Content/themes/base/images/ui-bg_glass_65_ffffff_1x400.png
-MvcPortal/Content/themes/base/images/ui-bg_glass_75_dadada_1x400.png
-MvcPortal/Content/themes/base/images/ui-bg_glass_75_e6e6e6_1x400.png
-MvcPortal/Content/themes/base/images/ui-bg_glass_95_fef1ec_1x400.png
-MvcPortal/Content/themes/base/images/ui-bg_highlight-soft_75_cccccc_1x100.png
-MvcPortal/Content/themes/base/images/ui-icons_222222_256x240.png
-MvcPortal/Content/themes/base/images/ui-icons_2e83ff_256x240.png
-MvcPortal/Content/themes/base/images/ui-icons_454545_256x240.png
-MvcPortal/Content/themes/base/images/ui-icons_888888_256x240.png
-MvcPortal/Content/themes/base/images/ui-icons_cd0a0a_256x240.png
-MvcPortal/Content/themes/base/jquery.ui.accordion.css
-MvcPortal/Content/themes/base/jquery.ui.all.css
-MvcPortal/Content/themes/base/jquery.ui.autocomplete.css
-MvcPortal/Content/themes/base/jquery.ui.base.css
-MvcPortal/Content/themes/base/jquery.ui.button.css
-MvcPortal/Content/themes/base/jquery.ui.core.css
-MvcPortal/Content/themes/base/jquery.ui.datepicker.css
-MvcPortal/Content/themes/base/jquery.ui.dialog.css
-MvcPortal/Content/themes/base/jquery.ui.progressbar.css
-MvcPortal/Content/themes/base/jquery.ui.resizable.css
-MvcPortal/Content/themes/base/jquery.ui.selectable.css
-MvcPortal/Content/themes/base/jquery.ui.slider.css
-MvcPortal/Content/themes/base/jquery.ui.tabs.css
-MvcPortal/Content/themes/base/jquery.ui.theme.css
-MvcPortal/Scripts/MicrosoftAjax.debug.js
-MvcPortal/Scripts/MicrosoftAjax.js
-MvcPortal/Scripts/MicrosoftMvcAjax.debug.js
-MvcPortal/Scripts/MicrosoftMvcAjax.js
-MvcPortal/Scripts/MicrosoftMvcValidation.debug.js
-MvcPortal/Scripts/MicrosoftMvcValidation.js
-MvcPortal/Scripts/jquery-1.5.1-vsdoc.js
-MvcPortal/Scripts/jquery-1.5.1.js
-MvcPortal/Scripts/jquery-1.5.1.min.js
-MvcPortal/Scripts/jquery-ui-1.8.11.js
-MvcPortal/Scripts/jquery-ui-1.8.11.min.js
-MvcPortal/Scripts/jquery.unobtrusive-ajax.js
-MvcPortal/Scripts/jquery.unobtrusive-ajax.min.js
-MvcPortal/Scripts/jquery.validate-vsdoc.js
-MvcPortal/Scripts/jquery.validate.js
-MvcPortal/Scripts/jquery.validate.min.js
-MvcPortal/Scripts/jquery.validate.unobtrusive.js
-MvcPortal/Scripts/jquery.validate.unobtrusive.min.js
-MvcPortal/Scripts/modernizr-1.7.js
-MvcPortal/Scripts/modernizr-1.7.min.js
 _ReSharper.MvcPortal/AspFileDataCache.dat
 _ReSharper.MvcPortal/AssemblyInfoCache.dat
 _ReSharper.MvcPortal/BuildScriptCache/.crc
@@ -142,8 +93,6 @@ _ReSharper.MvcPortal/XmlIndex/ServiceStack.xml/8350A466.bin
 _ReSharper.MvcPortal/XmlIndex/System.2.0.0.0.Contracts.xml/94F23D53.bin
 _ReSharper.MvcPortal/XmlIndex/System.2.0.0.0.Nullness.Generated.xml/F3B97463.bin
 _ReSharper.MvcPortal/XmlIndex/System.2.0.0.0.Pure.xml/17B16DA0.bin
-_ReSharper.MvcPortal/XmlIndex/System.4.0.0.0.Contracts.xml/9DCFFED5.bin
-_ReSharper.MvcPortal/XmlIndex/System.4.0.0.0.Nullness.Generated.xml/93108325.bin
 _ReSharper.MvcPortal/XmlIndex/System.4.0.0.0.Pure.xml/7C4CD7E6.bin
 _ReSharper.MvcPortal/XmlIndex/System.Activities.4.0.0.0.Nullness.Generated.xml/3D71A585.bin
 _ReSharper.MvcPortal/XmlIndex/System.Activities.DurableInstancing.4.0.0.0.Nullness.Generated.xml/CE5E4CC5.bin
@@ -162,6 +111,8 @@ _ReSharper.MvcPortal/XmlIndex/System.Configuration.4.0.0.0.Nullness.Generated.xm
 _ReSharper.MvcPortal/XmlIndex/System.Configuration.4.0.0.0.Pure.xml/B18D4E26.bin
 _ReSharper.MvcPortal/XmlIndex/System.Configuration.Install.2.0.0.0.Contracts.xml/FDB9FCB3.bin
 _ReSharper.MvcPortal/XmlIndex/System.Configuration.Install.2.0.0.0.Nullness.Generated.xml/C2BBD283.bin
+_ReSharper.MvcPortal/XmlIndex/System.4.0.0.0.Contracts.xml/9DCFFED5.bin
+_ReSharper.MvcPortal/XmlIndex/System.4.0.0.0.Nullness.Generated.xml/93108325.bin
 _ReSharper.MvcPortal/XmlIndex/System.Configuration.Install.4.0.0.0.Contracts.xml/5BC05F35.bin
 _ReSharper.MvcPortal/XmlIndex/System.Configuration.Install.4.0.0.0.Nullness.Generated.xml/F21BA145.bin
 _ReSharper.MvcPortal/XmlIndex/System.Configuration.Install.xml/3B89BCB1.bin
@@ -201,11 +152,6 @@ _ReSharper.MvcPortal/XmlIndex/System.Data.Linq.Attributes.xml/9A382D3F.bin
 _ReSharper.MvcPortal/XmlIndex/System.Data.Linq.I18n.xml/47E35B1E.bin
 _ReSharper.MvcPortal/XmlIndex/System.Data.Linq.xml/34869A17.bin
 _ReSharper.MvcPortal/XmlIndex/System.Data.Linq.xml/B30DAF64.bin
-_ReSharper.MvcPortal/XmlIndex/System.Data.OracleClient.2.0.0.0.Nullness.Generated.xml/4FD27E83.bin
-_ReSharper.MvcPortal/XmlIndex/System.Data.OracleClient.4.0.0.0.Nullness.Generated.xml/7F324D45.bin
-_ReSharper.MvcPortal/XmlIndex/System.Data.OracleClient.xml/27DDCE31.bin
-_ReSharper.MvcPortal/XmlIndex/System.Data.OracleClient.xml/9427B35F.bin
-_ReSharper.MvcPortal/XmlIndex/System.Data.Services.Client.3.5.0.0.Nullness.Generated.xml/21444647.bin
 _ReSharper.MvcPortal/XmlIndex/System.Data.Services.Client.4.0.0.0.Nullness.Generated.xml/B762E385.bin
 _ReSharper.MvcPortal/XmlIndex/System.Data.Services.Client.xml/0B993FC7.bin
 _ReSharper.MvcPortal/XmlIndex/System.Data.Services.Client.xml/3CEE3C54.bin
@@ -291,6 +237,11 @@ _ReSharper.MvcPortal/XmlIndex/System.Runtime.Serialization.xml/014E8BDC.bin
 _ReSharper.MvcPortal/XmlIndex/System.Runtime.Serialization.xml/F0B1191D.bin
 _ReSharper.MvcPortal/XmlIndex/System.Security.2.0.0.0.Contracts.xml/9B1543F3.bin
 _ReSharper.MvcPortal/XmlIndex/System.Security.2.0.0.0.Nullness.Generated.xml/40F9DBC3.bin
+_ReSharper.MvcPortal/XmlIndex/System.Data.OracleClient.2.0.0.0.Nullness.Generated.xml/4FD27E83.bin
+_ReSharper.MvcPortal/XmlIndex/System.Data.OracleClient.4.0.0.0.Nullness.Generated.xml/7F324D45.bin
+_ReSharper.MvcPortal/XmlIndex/System.Data.OracleClient.xml/27DDCE31.bin
+_ReSharper.MvcPortal/XmlIndex/System.Data.OracleClient.xml/9427B35F.bin
+_ReSharper.MvcPortal/XmlIndex/System.Data.Services.Client.3.5.0.0.Nullness.Generated.xml/21444647.bin
 _ReSharper.MvcPortal/XmlIndex/System.Security.2.0.0.0.Pure.xml/025F65C0.bin
 _ReSharper.MvcPortal/XmlIndex/System.Security.4.0.0.0.Contracts.xml/642F8175.bin
 _ReSharper.MvcPortal/XmlIndex/System.Security.4.0.0.0.Nullness.Generated.xml/1C73ED85.bin
@@ -358,3 +309,8 @@ _ReSharper.MvcPortal/XmlIndex/System.Web.Services.Attributes.xml/D91AB31F.bin
 _ReSharper.MvcPortal/XmlIndex/System.Web.Services.xml/057956D0.bin
 _ReSharper.MvcPortal/XmlIndex/mscorlib.xml/743ADB6C.bin
 _ReSharper.MvcPortal/XmlIndex/mscorlib.xml/80BFF39E.bin
+.idea/Portal.iml
+.idea/encodings.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/scopes/scope_settings.xml
